[package]
name = "flatten"
version = "0.1.0"
authors = ["Norman He <nohe@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde="^1.0"
serde_derive="^1.0"
error-chain = "^0.12"
log = "^0.4"
rust-flatten-json = "0.2.0"
