[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Norman He <nohe@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdjson-rust = {git = "https://github.com/SunDoge/simdjson-rust"}
flate2 = "1.0.18"
